# kevindb

./: AGENTS.md  Cargo.toml  Dockerfile  Justfile  Performance.md  README.md  SMITHDB_PARITY_PLAN.md  compose.yml
crates/kevindb-bench/: Cargo.toml
crates/kevindb-bench/src/: counting_object_store.rs  main.rs  mockgres.rs  synthetic.rs  workloads.rs
crates/kevindb-config/: Cargo.toml
crates/kevindb-config/src/: lib.rs
crates/kevindb-core/: Cargo.toml
crates/kevindb-core/src/: lib.rs
crates/kevindb-metastore-postgres/: Cargo.toml
crates/kevindb-metastore-postgres/migrations/: V10__allow_multiple_run_events_per_segment.sql  V11__add_phase2_filter_indexes.sql  V12__add_phase3_tree_indexes.sql  V13__add_phase4_thread_indexes.sql  V14__add_phase5_aggregates.sql  V18__add_compaction_leases.sql  V1__create_current_schema.sql  V1__create_ingest_metadata.sql  V3__add_langsmith_run_ids.sql  V5__create_feedback.sql  V6__add_run_events_and_partitions.sql  V8__add_run_head_locators.sql  V9__add_run_trace_locators_and_idempotency.sql
crates/kevindb-metastore-postgres/src/: lib.rs
crates/kevindb-otlp/: Cargo.toml
crates/kevindb-otlp/src/: lib.rs
crates/kevindb-server/: Cargo.toml
crates/kevindb-server/src/: cache.rs  langsmith.rs  lib.rs  main.rs  metrics.rs  routes.rs  routing.rs
crates/kevindb-server/src/langsmith/: aggregates.rs  diagnostics.rs  direct_runs.rs  feedback.rs  filter.rs  identifiers.rs  payload.rs  tests.rs  threads.rs
crates/kevindb-server/tests/: multi_process_roles.rs
docs/: operations.md
docs/openapi/: langsmith-compat.openapi.json
scripts/: check.sh
src/: ingest.rs  lib.rs  metrics.rs  otlp.rs  query.rs  record.rs  segment.rs
src/db/: mod.rs
src/db/migrations/: V11__add_phase2_filter_indexes.sql  V12__add_phase3_tree_indexes.sql  V13__add_phase4_thread_indexes.sql  V15__add_phase6_search_indexes.sql  V16__add_project_routes.sql  V17__add_compaction_cleanup_markers.sql  V1__create_ingest_metadata.sql  V2__add_run_query_fields.sql  V3__add_langsmith_run_ids.sql  V4__index_segment_manifests.sql  V6__add_run_events_and_partitions.sql  V7__add_delete_and_retention_vectors.sql  V8__add_run_head_locators.sql  V9__add_run_trace_locators_and_idempotency.sql
src/ingest/: compaction.rs  deletion.rs  indexes.rs  metadata.rs  routing.rs  tests.rs  thread.rs  tree.rs
src/ingest/tests/: phase1.rs  phase10.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  phase8.rs
src/query/: aggregates.rs  cleanup.rs  distributed.rs  filter.rs  object_store_stats.rs  planner.rs  random_access.rs  retention.rs  routing.rs  rows.rs  search.rs  tests.rs  threads.rs  tree.rs  tree_access.rs  tree_filter.rs
src/query/aggregates/: distributed.rs  rollups.rs  scan.rs  tests.rs
src/query/filter/: parser.rs  phase6.rs  tests.rs
src/search/: codec.rs  indexer.rs  json_tape.rs  mod.rs  predicate.rs  selection.rs
tests/: ingest_slice.rs
tests/integration/langsmith-sdk/: README.md  pyproject.toml  test_langsmith_sdk.py
tests/support/: mockgres.rs
