[package]
name = "kevindb"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"

[workspace]
members = [".", "crates/kevindb-server"]
resolver = "3"

[dependencies]
anyhow = "1.0.100"
arrow-array = "58.3"
arrow-schema = "58.3"
bytes = "1.11.0"
datafusion = { version = "54.0.0", default-features = false, features = ["sql"] }
hex = "0.4.3"
object_store = "0.13.2"
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.14.1"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-postgres = "0.7.16"
tracing = "0.1.41"
url = "2.5.7"
vortex = { version = "0.76.0", features = ["object_store", "tokio"] }
vortex-datafusion = "0.76.0"

[dev-dependencies]
portpicker = "0.1.1"
