[package]
name = "kevindb"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"

[workspace]
members = [
    ".",
    "crates/kevindb-bench",
    "crates/kevindb-config",
    "crates/kevindb-core",
    "crates/kevindb-metastore-postgres",
    "crates/kevindb-otlp",
    "crates/kevindb-server",
]
resolver = "3"

[dependencies]
anyhow = "1.0.100"
arrow-array = "58.3"
arrow-schema = "58.3"
async-trait = "0.1.89"
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
datafusion = { version = "54.0.0", default-features = false, features = ["sql"] }
futures-util = "0.3.31"
fst = "0.4.7"
hex = "0.4.3"
kevindb-core = { path = "crates/kevindb-core" }
kevindb-metastore-postgres = { path = "crates/kevindb-metastore-postgres" }
object_store = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-postgres = "0.7.16"
tracing = "0.1.41"
url = "2.5.7"
vortex = { version = "0.76.0", features = ["object_store", "tokio"] }
vortex-datafusion = "0.76.0"

[dev-dependencies]
kevindb-otlp = { path = "crates/kevindb-otlp" }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "trace"] }
portpicker = "0.1.1"
