[package]
name = "kevindb-bench"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
publish = false

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
futures-util = "0.3.31"
kevindb = { path = "../.." }
kevindb-core = { path = "../kevindb-core" }
kevindb-metastore-postgres = { path = "../kevindb-metastore-postgres" }
object_store = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "time"] }
tokio-postgres = "0.7.16"
