[package]
name = "kevindb-metastore-postgres"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.100"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt"] }
tokio-postgres = "0.7.16"
tracing = "0.1.41"

[dev-dependencies]
kevindb = { path = "../.." }
portpicker = "0.1.1"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "time"] }
