[package]
name = "kevindb-otlp"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.100"
hex = "0.4.3"
kevindb-core = { path = "../kevindb-core" }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "trace"] }
serde_json = "1.0.145"
