[package]
name = "kevindb-server"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
bytes = "1.11.0"
kevindb = { path = "../.." }
object_store = "0.13.2"
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
portpicker = "0.1.1"
serde_json = "1.0.145"
tokio-postgres = "0.7.16"
tower = "0.5.2"
