[package]
name = "kevindb-server"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
bytes = "1.11.0"
chrono = "0.4.42"
foyer = { version = "0.22.3", features = ["serde"] }
futures-util = "0.3.31"
kevindb = { path = "../.." }
kevindb-config = { path = "../kevindb-config" }
kevindb-core = { path = "../kevindb-core" }
kevindb-metastore-postgres = { path = "../kevindb-metastore-postgres" }
kevindb-otlp = { path = "../kevindb-otlp" }
object_store = { version = "0.13.2", features = ["aws"] }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tokio-postgres = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.23.4", features = ["v5"] }

[dev-dependencies]
portpicker = "0.1.1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
tower = "0.5.2"
